@@ -1,4 +1,4 @@
-$Id: History,v 1.23 2001-10-29 13:53:18 maire Exp $
+$Id: History,v 1.24 2001-11-07 16:26:15 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+07 nov 01: mma (muons-V03-02-09)
+- correction(Tmax+xsection computation) L.Urban
+    
 28 oct 01: mma (muons-V03-02-08)
 - all static functions no more inlined
      
